infra/k8/apps/imdbgraph/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: imdbgraph
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdbgraph-deployment
  labels:
    app: imdbgraph-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imdbgraph-api
  template:
    metadata:
      labels:
        app: imdbgraph-api
    spec:
      containers:
        - name: imdbgraph-api
          image: ghcr.io/aamini11/imdbgraph-api:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: imdbgraph-service
spec:
  type: ClusterIP
  selector:
    app: imdbgraph-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: imdbgraph-http
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: imdbgraph-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: imdbgraph-https
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: networking
  hostnames:
    - api.staging.imdbgraph.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: imdbgraph-service
          port: 80
